--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>SLD event's</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
+    </head>
+
+    <body>
+
+    </body>
+
+</html>
