--- a/index.html
+++ b/index.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>SLD event's</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
-    </head>
+<html lang="fr">
 
-    <body>
+<head>
+  <meta charset="UTF-8">
+  <title>SLD event's</title>
 
-    </body>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <header>
+    <div class="navbar">
+      <ul class="nav">
+        <li class="item">
+          <a href="#">Accueil</a>
+        </li>
+
+        <li class="item">
+          <a href="#">Présentation</a>
+        </li>
+
+        <li class="item">
+          <a href="#">Galerie</a>
+        </li>
+
+        <li class="item">
+          <a href="#">La Team</a>
+        </li>
+
+        <li class="item">
+          <a href="#" class="contact">Contact</a>
+        </li>
+      </ul>
+
+      <div class="logo">
+        <img src="./img/logo.png">
+      </div>
+    </div>
+  </header>
+
+  <div class="banniere">
+    <div class="banniere-gauche">
+      <h1>SLD event's</h1>
+      <hr size="1" color="white">
+      <h3>
+        L'évenemtielle sur mesure !<br/>
+        L'animation sans fausses notes !<br/>
+        Une équipe à votre écoute !<br/>
+      </h3>
+
+    </div>
+
+  </div>
+
+  <script src="jquery.js"></script>
+  <script src="script.js"></script>
+
+
+
+
+</body>
 
 </html>
