--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>SLD event's</title>
 
   <link rel="stylesheet" href="style.css">
+  <link href="boostrap.css" />
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
 </head>
@@ -13,8 +14,8 @@
 <body>
 
   <header>
-    <div class="navbar">
-      <ul class="nav">
+    <div class="navbar row">
+      <ul class="nav col-md-9">
         <li class="item">
           <a href="#">Accueil</a>
         </li>
@@ -36,14 +37,14 @@
         </li>
       </ul>
 
-      <div class="logo">
+      <div class="logo col-md-3">
         <img src="./img/logo.png">
       </div>
     </div>
   </header>
 
-  <div class="banniere">
-    <div class="banniere-gauche">
+  <div class="banniere row">
+    <div class="banniere-gauche col-md-6">
       <h1>SLD event's</h1>
       <hr size="1" color="white">
       <h3>
